# Wigli

./: LICENSE  README.md  makereqs.bat  makereqs.py  pyproject.toml  requirements.txt
.github/workflows/: bandit.yml
src/wigli/: __init__.py  __main__.py  _wigli_argparser.py  _wigli_bots.py  _wigli_cli.py  _wigli_data.py  _wigli_plugins.py  _wigli_testutils.py  _wigli_tools.py  _wigli_version.py
tests/test_wigli_api/: test_wigli_api_core.py  test_wigli_api_plugins.py
tests/test_wigli_cli/: test_wigli_cli_core.py  test_wigli_cli_plugins.py
